--- a/SwashbucklerDiary/wwwroot/css/app.css
+++ b/SwashbucklerDiary/wwwroot/css/app.css
@@ -204,19 +204,19 @@ a, .btn-link {
     color: #fff !important;
 }
 
-.theme--light.m-picker__body {
+.theme--light .my-picker .m-picker__body {
     background: #fdfdfd !important;
 }
 
-    .theme--light.m-picker__body + .m-picker__actions {
+    .theme--light .my-picker .m-picker__body + .m-picker__actions {
         background: #fdfdfd !important;
     }
 
-.theme--dark.m-picker__body {
+.theme--dark .my-picker .m-picker__body {
     background: #1e1e1e !important;
 }
 
-    .theme--dark.m-picker__body + .m-picker__actions {
+    .theme--dark .my-picker .m-picker__body + .m-picker__actions {
         background: #1e1e1e !important;
     }
 
