--- a/SwashbucklerDiary/Components/DialogComponents/DeleteDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DeleteDialog.razor
@@ -13,10 +13,10 @@
         </MCardText>
         <MCardActions>
             <MSpacer></MSpacer>
-            <MButton Text OnClick="HandleOnCancel">
+            <MButton Text="true" OnClick="HandleOnCancel">
                 @(I18n.T("Share.Cancel"))
             </MButton>
-            <MButton Text
+            <MButton Text="true"
                      Color="red"
                      OnClick="OnOK">
                 @(I18n.T("Share.OK"))
