💄 style: update some styles

--- a/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog.razor
@@ -45,6 +45,7 @@
                     </MButton>
                     <MButton Class="flex-grow-1"
                              Dark="true"
+                             Depressed="true"
                              Rounded
                              Color="primary"
                              OnClick="OnArgee">
