--- a/SwashbucklerDiary/Components/DialogComponents/LogFilterDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/LogFilterDialog.razor
@@ -10,7 +10,7 @@
                 <MIcon>mdi-close</MIcon>
             </MButton>
         </MCardTitle>
-        <MCardText Class="pb-0">
+        <MCardText>
             <div>
                 <MChipGroup @bind-Value="DefaultDate" Column="true">
                     @foreach (var item in DefaultDates)
