🐛 fix: fixed some bugs

--- a/SwashbucklerDiary/Components/MyDatePicker.razor
+++ b/SwashbucklerDiary/Components/MyDatePicker.razor
@@ -1,6 +1,6 @@
 ﻿@inherits DialogComponentBase
 
-<MultiDisplay Tablet>
+<MultiDisplay>
     <MobileContent>
         <PPMobileDatePicker MyVisible="Value"
                             MyVisibleChanged="ValueChanged"
