--- a/SwashbucklerDiary/Components/MyDialog.razor
+++ b/SwashbucklerDiary/Components/MyDialog.razor
@@ -1,6 +1,6 @@
 ﻿@inherits DialogComponentBase
 
-<MultiDisplay Tablet="true">
+<MultiDisplay>
     <MobileContent>
         <MMBottomSheet MyValue="Value"
                        MyValueChanged="ValueChanged">
