--- a/SwashbucklerDiary/Components/MyMenu.razor
+++ b/SwashbucklerDiary/Components/MyMenu.razor
@@ -1,6 +1,6 @@
 ﻿@inherits DialogComponentBase
 
-<MultiDisplay Tablet>
+<MultiDisplay>
     <MobileContent>
         <MMBottomSheet MyValue="Value"
                        MyValueChanged="ValueChanged">
