💄 style: update m-divider color

--- a/SwashbucklerDiary/wwwroot/css/app.css
+++ b/SwashbucklerDiary/wwwroot/css/app.css
@@ -331,3 +331,7 @@ a, .btn-link {
         margin-bottom:70px;
     }
 }
+
+.theme--light.m-divider {
+    border-color: rgba(0,0,0,.05) !important;
+}
