💄 style: update some styles

--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -16,10 +16,10 @@
 </MAppBar>
 
 <ScrollContainer>
-    <div class="d-md-flex flex-md-row justify-space-between">
+    <div class="d-sm-flex flex-sm-row justify-space-between">
         <MHover>
             <MCard @attributes="context.Attrs"
-                   Class="mine-info mb-5 py-sm-3"
+                   Class="mine-info mb-5 py-md-3"
                    Elevation="@(context.Hover?"4":"2")"
                    Rounded="@("lg")"
                    Ripple="false"
@@ -53,7 +53,7 @@
             </MCard>
         </MHover>
 
-        <MCard Class="mine-info mb-5 ml-md-5 d-flex"
+        <MCard Class="mine-info mb-5 ml-sm-5 d-flex"
                Elevation="2"
                Rounded="@("lg")">
             <MList Class="d-flex flex-grow-1">
