--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -4,7 +4,7 @@
 <MAppBar App="true"
          Elevation="0">
     <ChildContent>
-        <MButton Icon="true" OnClick="OnBack">
+        <MButton Icon="true" OnClick="NavigateToBack">
             <MIcon>
                 mdi-arrow-left
             </MIcon>
