🆕 feat: support WebDAV backups

--- a/SwashbucklerDiary/Components/DialogComponents/LogFilterDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/LogFilterDialog.razor
@@ -63,14 +63,14 @@
                     <MButton Rounded="true"
                              Depressed="true"
                              Large="true"
-                             Class="text-subtitle-1 flex-grow-1"
+                             Class="text-subtitle-1 flex-grow-1 mb-2"
                              OnClick="HandleOnReset">
                         @(I18n.T("Share.Reset"))
                     </MButton>
                     <MButton Rounded="true"
                              Depressed="true"
                              Large="true"
-                             Class="text-subtitle-1 flex-grow-1"
+                             Class="text-subtitle-1 flex-grow-1 mb-2"
                              OnClick="HandleOnOK">
                         @(I18n.T("Share.OK"))
                     </MButton>
