--- a/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
@@ -8,14 +8,16 @@
           MyValueChanged="InternalValueChanged"
           MaxWidth="420"
           @ref="myDialog">
-    <MForm @ref="@form" Model="@model" OnValidSubmit="HandleOnOK" EnableValidation EnableI18n>
+    <MForm @ref="@form"
+           Model="@model"
+           OnValidSubmit="HandleOnOK"
+           EnableValidation="true"
+           EnableI18n="true">
         <MCard Rounded="@("lg")">
             <MCardTitle>
                 @(Title)
-                <MSpacer>
-
-                </MSpacer>
-                <MButton Icon OnClick="HandleOnCancel">
+                <MSpacer></MSpacer>
+                <MButton Icon="true" OnClick="HandleOnCancel">
                     <MIcon>
                         mdi-close
                     </MIcon>
@@ -24,9 +26,9 @@
             <MCardText Class="pb-0">
                 <MTextField @bind-Value="model.Password"
                             @ref="TextField"
-                            Dense
+                            Dense="true"
                             HideDetails="@("auto")"
-                            Outlined
+                            Outlined="true"
                             Counter="@MaxLength"
                             maxlength="@MaxLength"
                             spellcheck="false"
@@ -36,8 +38,8 @@
                             OnAppendClick="() => showPassword1 = !showPassword1">
                 </MTextField>
                 <MTextField @bind-Value="model.PasswordConfirmation"
-                            Dense
-                            Outlined
+                            Dense="true"
+                            Outlined="true"
                             Counter="@MaxLength"
                             maxlength="@MaxLength"
                             spellcheck="false"
@@ -50,10 +52,10 @@
             </MCardText>
             <MCardActions>
                 <MSpacer></MSpacer>
-                <MButton Text OnClick="HandleOnCancel">
+                <MButton Text="true" OnClick="HandleOnCancel">
                     @(I18n.T("Share.Cancel"))
                 </MButton>
-                <MButton Text
+                <MButton Text="true"
                          Type="submit"
                          Color="primary">
                     @(I18n.T("Share.Save"))
