--- a/SwashbucklerDiary/Components/MyComponents/MyAppBar.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyAppBar.razor
@@ -1,4 +1,6 @@
-﻿<MAppBar App="true"
+﻿@namespace SwashbucklerDiary.Components
+
+<MAppBar App="true"
          Elevation="0">
     <MButton Icon="true" OnClick="OnClick">
         <MIcon>
