--- a/SwashbucklerDiary/Components/MyComponents/MyMarkdown.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyMarkdown.razor
@@ -1,4 +1,6 @@
-﻿<div class="@WrapClass">
+﻿@namespace SwashbucklerDiary.Components
+
+<div class="@WrapClass">
     <MMarkdown Value="@Value"
                ValueChanged="ValueChanged"
                Class="@Class"
