--- a/SwashbucklerDiary/Components/MyComponents/ScrollContainer.razor
+++ b/SwashbucklerDiary/Components/MyComponents/ScrollContainer.razor
@@ -1,4 +1,6 @@
-﻿<div id="@Id"
+﻿@namespace SwashbucklerDiary.Components
+
+<div id="@Id"
      class="overflow-y-auto flex-grow-1 @(Class)"
      style="min-height:0;height:0;@(Style)"
      @oncontextmenu="OnContextmenu">
