--- a/SwashbucklerDiary/Components/MyComponents/TagCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/TagCardList.razor
@@ -1,4 +1,5 @@
-﻿@inherits MyComponentBase
+﻿@namespace SwashbucklerDiary.Components
+@inherits MyComponentBase
 
 <div class="d-flex justify-space-between flex-wrap">
     @foreach (var item in Value!)
