--- a/SwashbucklerDiary/Components/MyComponents/DiaryCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCardList.razor
@@ -1,4 +1,5 @@
-﻿@inherits MyComponentBase
+﻿@namespace SwashbucklerDiary.Components
+@inherits MyComponentBase
 
 <div class="d-flex justify-space-between flex-wrap @(Class)">
     @foreach (var item in Value)
