--- a/SwashbucklerDiary/Components/MyComponents/LocationListItem.razor
+++ b/SwashbucklerDiary/Components/MyComponents/LocationListItem.razor
@@ -1,4 +1,5 @@
-﻿@inherits MyComponentBase
+﻿@namespace SwashbucklerDiary.Components
+@inherits MyComponentBase
 
 <MListItem @oncontextmenu="()=>ShowMenu=true">
     <MListItemIcon>
