--- a/SwashbucklerDiary/Components/MyComponents/MyDialog.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyDialog.razor
@@ -1,4 +1,5 @@
-﻿@inherits DialogComponentBase
+﻿@namespace SwashbucklerDiary.Components
+@inherits DialogComponentBase
 
 <MultiDisplay>
     <MobileContent>
