--- a/SwashbucklerDiary/Components/MyComponents/MyMenu.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyMenu.razor
@@ -1,4 +1,5 @@
-﻿@inherits DialogComponentBase
+﻿@namespace SwashbucklerDiary.Components
+@inherits DialogComponentBase
 
 <MultiDisplay>
     <MobileContent>
