--- a/SwashbucklerDiary/Components/MyComponents/TagCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/TagCard.razor
@@ -1,4 +1,5 @@
-﻿@inherits MyComponentBase
+﻿@namespace SwashbucklerDiary.Components
+@inherits MyComponentBase
 
 <MHover>
     <MCard @attributes="context.Attrs"
