--- a/SwashbucklerDiary/Components/DialogComponents/LogFilterDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/LogFilterDialog.razor
@@ -60,17 +60,19 @@
                     </MButton>
                 </DesktopContent>
                 <MobileContent>
-                    <MButton Rounded="true"
+                    <MButton Class="text-subtitle-1 flex-grow-1 mb-2"
+                             Rounded="true"
                              Depressed="true"
                              Large="true"
-                             Class="text-subtitle-1 flex-grow-1 mb-2"
+                             Ripple="false"
                              OnClick="HandleOnReset">
                         @(I18n.T("Share.Reset"))
                     </MButton>
-                    <MButton Rounded="true"
+                    <MButton Class="text-subtitle-1 flex-grow-1 mb-2"
+                             Rounded="true"
                              Depressed="true"
                              Large="true"
-                             Class="text-subtitle-1 flex-grow-1 mb-2"
+                             Ripple="false"
                              OnClick="HandleOnOK">
                         @(I18n.T("Share.OK"))
                     </MButton>
