--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard.razor
@@ -24,7 +24,7 @@
                     </MIcon>
                 }
                 <div @onclick:stopPropagation="true">
-                    <MyMenu @bind-Value="ShowMenu" ViewListItems="ViewListItems">
+                    <MyMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
                         <ButtonContent>
                             <MIcon>mdi-dots-horizontal</MIcon>
                         </ButtonContent>
