--- a/SwashbucklerDiary/Components/MyComponents/LocationListItem.razor
+++ b/SwashbucklerDiary/Components/MyComponents/LocationListItem.razor
@@ -13,7 +13,7 @@
         </MListItemTitle>
     </MListItemContent>
     <MListItemAction>
-        <MyMenu @bind-Value="ShowMenu" ViewListItems="ViewListItems">
+        <MyMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
             <ButtonContent>
                 <MIcon>mdi-pencil</MIcon>
             </ButtonContent>
