--- a/SwashbucklerDiary/Components/MyComponents/TagCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/TagCard.razor
@@ -22,7 +22,7 @@
 
             <MListItemAction>
                 <div @onclick:stopPropagation="true">
-                    <MyMenu @bind-Value="ShowMenu" ViewListItems="ViewListItems">
+                    <MyMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
                         <ButtonContent>
                             <MIcon>mdi-pencil</MIcon>
                         </ButtonContent>
