--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -28,7 +28,7 @@
         </MIcon>
     </MButton>
 
-    <MyMenu @bind-Value="ShowMenu" ViewListItems="ViewListItems">
+    <MyMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
         <ButtonContent>
             <MultiDisplay>
                 <DesktopContent>
