--- a/SwashbucklerDiary/Pages/LogPage.razor
+++ b/SwashbucklerDiary/Pages/LogPage.razor
@@ -45,7 +45,7 @@
         </MIcon>
     </MButton>
 
-    <MyMenu @bind-Value="ShowMenu" ViewListItems="ViewListItems">
+    <MyMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
         <ButtonContent>
             <MultiDisplay>
                 <DesktopContent>
